tests/specs/ecosystem/zone_x/zone_x/0_7_0.test
zone-x/zone-x/0.7.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'TimeZone'.
/** Gets users timezone from system settings */ export function getCurrentTimeZone(): TimeZone {
                                                                                      ~~~~~~~~
    at file://<tmpdir>/src/index.ts:1:87

TS2304 [ERROR]: Cannot find name 'TimeZone'.
  timeZone: TimeZone;
            ~~~~~~~~
    at file://<tmpdir>/src/index.ts:13:13

Found 2 errors.

